feat: 엘리베이터 컴포넌트 분리 및배열로 상태 관리

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"
 		/>
+		<style>
+			* {
+				box-sizing: border-box;
+			}
+		</style>
 		<title>카페 노노 - 개발자 과제</title>
 	</head>
 	<body>
